frontend/src/pages/scenes/sceneForm/styles.scss
.SceneForm {
  label,
  .label {
    font-weight: 700;
    margin-bottom: 0;
  }

  .performer-item {
    align-items: center;
    display: flex;
    margin: 0.5rem 0;

    label {
      margin-left: auto;
      padding: 0 0.5rem;
    }
  }

  .performer-name {
    flex-grow: 1;
    width: 0;
  }

  .remove-item {
    background: transparent;
    border: none;
    color: white;
    opacity: 100%;

    &:hover {
      opacity: 80%;
    }
  }

  .SearchField {
    flex-grow: 1;
    max-width: 400px;
    width: auto;
  }

  .add-performer {
    align-items: center;
    display: flex;

    .SearchField {
      display: inline-block;
      margin-left: auto;
      padding-top: 0.5rem;
    }
  }

  .description {
    height: 10rem;
  }

  .button-row {
    display: flex;

    .reset-button {
      margin-left: auto;
    }
  }

  .studio-select .invalid-feedback {
    display: block;
  }
}

